[gd_scene load_steps=5 format=3 uid="uid://bej0vo1iej2y6"]

[ext_resource type="Script" uid="uid://b0haff4kwbl30" path="res://scripts/ui/pause_menu.gd" id="1_pause_menu_script"]
[ext_resource type="Theme" uid="uid://bqx8yqn7ehynj" path="res://resources/ui_theme.tres" id="2_theme"]
[ext_resource type="FontFile" uid="uid://bek7fih7dv3co" path="res://fonts/button_font.ttf" id="3_f6eus"]

[sub_resource type="LabelSettings" id="LabelSettings_8uki6"]
font = ExtResource("3_f6eus")
font_size = 36

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("2_theme")
script = ExtResource("1_pause_menu_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.5)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 180.0
text = "PAUSED"
label_settings = SubResource("LabelSettings_8uki6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
alignment = 1

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="DisconnectButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Disconnect"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
oversampling_override = 1.0
theme = ExtResource("2_theme")

[node name="UniversalOptionsMenu" type="Control" parent="."]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="ColorRect" parent="UniversalOptionsMenu"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.5)

[node name="BackButton" type="Button" parent="UniversalOptionsMenu"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 60.0
text = "Back"

[node name="OptionsContainer" type="VBoxContainer" parent="UniversalOptionsMenu"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 80.0

[node name="TabButtons" type="HBoxContainer" parent="UniversalOptionsMenu/OptionsContainer"]
layout_mode = 2

[node name="AudioTabButton" type="Button" parent="UniversalOptionsMenu/OptionsContainer/TabButtons"]
layout_mode = 2
text = "Audio"

[node name="VideoTabButton" type="Button" parent="UniversalOptionsMenu/OptionsContainer/TabButtons"]
layout_mode = 2
text = "Video"

[node name="ControlsTabButton" type="Button" parent="UniversalOptionsMenu/OptionsContainer/TabButtons"]
layout_mode = 2
text = "Controls"

[node name="ContentArea" type="VBoxContainer" parent="UniversalOptionsMenu/OptionsContainer"]
layout_mode = 2

[node name="AudioContent" type="VBoxContainer" parent="UniversalOptionsMenu/OptionsContainer/ContentArea"]
layout_mode = 2

[node name="MasterVolumeLabel" type="Label" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/AudioContent"]
layout_mode = 2
text = "Master Volume"

[node name="MasterVolumeSlider" type="HSlider" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/AudioContent"]
layout_mode = 2
value = 50.0

[node name="MusicVolumeLabel" type="Label" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/AudioContent"]
layout_mode = 2
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/AudioContent"]
layout_mode = 2
value = 50.0

[node name="SFXVolumeLabel" type="Label" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/AudioContent"]
layout_mode = 2
text = "SFX Volume"

[node name="SFXVolumeSlider" type="HSlider" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/AudioContent"]
layout_mode = 2
value = 50.0

[node name="VoiceVolumeLabel" type="Label" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/AudioContent"]
layout_mode = 2
text = "Voice Volume"

[node name="VoiceVolumeSlider" type="HSlider" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/AudioContent"]
layout_mode = 2
value = 50.0

[node name="VideoContent" type="VBoxContainer" parent="UniversalOptionsMenu/OptionsContainer/ContentArea"]
visible = false
layout_mode = 2

[node name="ResolutionLabel" type="Label" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/VideoContent"]
layout_mode = 2
text = "Resolution"

[node name="ResolutionDropdown" type="OptionButton" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/VideoContent"]
layout_mode = 2

[node name="FullscreenLabel" type="Label" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/VideoContent"]
layout_mode = 2
text = "Fullscreen"

[node name="FullscreenCheckbox" type="CheckBox" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/VideoContent"]
layout_mode = 2

[node name="VSyncLabel" type="Label" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/VideoContent"]
layout_mode = 2
text = "VSync"

[node name="VSyncCheckbox" type="CheckBox" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/VideoContent"]
layout_mode = 2

[node name="ControlsContent" type="VBoxContainer" parent="UniversalOptionsMenu/OptionsContainer/ContentArea"]
visible = false
layout_mode = 2

[node name="MouseSensitivityLabel" type="Label" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/ControlsContent"]
layout_mode = 2
text = "Mouse Sensitivity"

[node name="MouseSensitivitySlider" type="HSlider" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/ControlsContent"]
layout_mode = 2
value = 50.0

[node name="FOVLabel" type="Label" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/ControlsContent"]
layout_mode = 2
text = "Field of View"

[node name="FOVSlider" type="HSlider" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/ControlsContent"]
layout_mode = 2
value = 50.0

[node name="CrosshairLabel" type="Label" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/ControlsContent"]
layout_mode = 2
text = "Crosshair Style"

[node name="CrosshairDropdown" type="OptionButton" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/ControlsContent"]
layout_mode = 2
